# symengine.ml

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  jbuild  ocaml_wrapper.cpp  ocaml_wrapper.h  sample.c  symengine.opam  visitor.cpp  visitor.h
splcore/: CMakeLists.txt  jbuild  ocaml_wrapper.cpp  ocaml_wrapper.h  sample.c  splcore.ml  test.ml
splcore/config/: find_library.ml
src/: basicSym.ml  config.cpp  jbuild  symengine.ml  type_codes.ml  utils.ml  visitor.cpp  visitor.h  visitor.ml  visitor_native.cpp
src/config/: find_library.ml  jbuild
test/: jbuild  test.ml
